fix text align, button align, editor align

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -2177,3 +2177,15 @@ textarea:focus,
 .gk-government-assistance-area {
   display: none;
 }
+
+.give-donor-dashboard-text-control
+  .give-donor-dashboard-text-control__input
+  #qt_posttext_toolbar
+  input {
+  width: auto;
+  margin-top: 20px;
+}
+
+.give-kindness-text-right {
+  text-align: right;
+}
